syntax = "proto3";
package tern.artic.grpc;

message ProfileDescriptor {
  string profile_id = 1;
  string text = 2;
}

message GetResponse {
  string text = 1;
}

message SaveRequest {
  string text = 1;
}

message SaveResponse {
  string id = 1;
}
